--- a/biblioteca/libros/templates/base.html
+++ b/biblioteca/libros/templates/base.html
@@ -5,6 +5,12 @@
     <title>jczerocool</title>
   </head>
   <body>
-    <h1>{{mensaje1}}</h1>
+
+    {%block content%}
+    
+
+    {%endblock%}
+
+
   </body>
 </html>
